--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: rgb(236, 203, 126);
-  color: #ffd28d;
+  background-color: rgb(234, 208, 146);
+  color: #bc9151;
   padding: 10px 20px;
   text-align: center;
   position: relative;
@@ -17,7 +17,7 @@
 
 .footer-link {
   color: #675438;
-  text-decoration: none;
+  text-decoration: underline;
   font-weight: bold;
   font-size: 16px;
 }
@@ -28,7 +28,7 @@
 
 @media (max-width: 768px) {
   .footer {
-    padding: 20px 0;
+    padding: 10px 0;
   }
 
   .footer-link {
