--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
 
 .navbar {
   position: fixed;
@@ -21,7 +21,7 @@
   margin: 120px;
   width: auto;
   height: 500px;
-  animation: upDown 3s infinite ease-in-out; /* Add the up-down animation here */
+  animation: upDown 3s infinite ease-in-out; /* Enhanced up-down animation */
 }
 
 .text {
@@ -86,7 +86,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-10px); /* Adjust the value for vertical movement */
+    transform: translateY(-30px); /* Increased vertical movement */
   }
   100% {
     transform: translateY(0);
