--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -6,6 +6,7 @@
   position: relative;
   width: 100%;
   box-sizing: border-box;
+  margin-top: 100px;
 }
 
 .footer-content {
@@ -29,6 +30,7 @@
 @media (max-width: 768px) {
   .footer {
     padding: 10px 0;
+    margin-top: 80px;
   }
 
   .footer-link {
