--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,11 @@ body {
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #594a0d;
   text-decoration: inherit;
 }
 a:hover {
-  color: #3b300a;
+  color: #625615;
 }
 
 body {
