--- a/src/components/css/Team.css
+++ b/src/components/css/Team.css
@@ -39,17 +39,17 @@
 }
 
 .avatar {
-  background-color: #ffd28d;
-  color: #281c14;
-  font-size: 2rem;
-  font-weight: bold;
   height: 60px;
   width: 60px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   margin: 0 auto 1rem;
+  overflow: hidden;
+}
+
+.avatar-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .name {
@@ -62,10 +62,8 @@
   color: #666;
 }
 
-
 @media (max-width: 768px) {
-
-    .team-heading{
-      font-size: 2.5rem;
-    }
+  .team-heading {
+    font-size: 2.5rem;
   }
+}
