--- a/src/components/css/Features.css
+++ b/src/components/css/Features.css
@@ -38,6 +38,10 @@
   box-sizing: border-box;
   margin-bottom: 1.5rem;
   text-align: center;
+  height: 200px; /* Set a fixed height */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .feature-title {
@@ -92,6 +96,7 @@
     width: 100%;
     max-width: 100%;
     margin: 0.5rem 0;
+    height: auto; /* Adjust height for smaller screens */
   }
 
   .feature-title {
@@ -116,6 +121,7 @@
     width: 100%;
     max-width: 100%;
     margin: 0.5rem 0;
+    height: auto; /* Adjust height for smaller screens */
   }
 
   .feature-title {
